--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
@@ -14,9 +15,9 @@
   <!--НАШ ХЕДЕР-->
   <header class="header">
     <div class="header-top">
-      <div class="container">
+      <div class="container header-top-container">
         <a class="logo-main logo" href="index.html">
-          <img src="img\logo-technomart.svg" width="110" height="19" alt="Техномарт">
+          <img src="img/logo-technomart.svg" width="110" height="19" alt="логотип Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
           <input id="search" type="search" placeholder="Поиск:" class="search-input">
@@ -35,14 +36,14 @@
         </ul>
       </div>
     </div>
-    <div class="container">
+    <div class="container header-middle-container">
       <div class="header-middle">
         <p class="description">
           Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта
         </p>
         <div class="header-address">
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div class="account">
           <!--ТУТ НАДО ПОРАБОТАТЬ-->
@@ -69,15 +70,15 @@
           </ul>
         </div>
       </div>
-      <nav class="navigation container">
+      <nav class="navigation">
         <ul class="nav-list">
-          <li class="nav-item"><a href="index.html">Главная</a></li>
+          <li class="nav-item nav-item-first"><a href="index.html">Главная</a></li>
           <li class="nav-item"><a href="#">Компания</a></li>
           <li class="nav-item paged"><a>Каталог</a></li>
           <li class="nav-item"><a href="#">Новости</a></li>
           <li class="nav-item"><a href="#">Спецпредложения</a></li>
           <li class="nav-item"><a href="#">Доставка</a></li>
-          <li class="nav-item"><a href="#">Контакты</a></li>
+          <li class="nav-item nav-item-last"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -192,94 +193,100 @@
           <ul class="card-items goods">
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
-              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
-              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
-              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
-              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+              <span class="new">new</span>
+              <img src="img/item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
-              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
-              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
-              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+              <span class="new">new</span>
+              <img src="img/item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
-              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
-              <span class="new">new</span>
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
-              <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+              <span class="new">new</span>
+              <img src="img/item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <span class="del">22500 Р.</span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
-              <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <span class="del">30500 Р.</span>
               <span class="price">25500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
             <li class="card-item">
               <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
-              <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+              <span class="new new-none">new</span>
+              <img src="img/item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <span class="del"></span>
               <span class="price">15500 Р.</span>
               <div class="buy">
-                <a class="buy-btn" href="">Купить</a>
+                <a class="buy-btn" href="buy.html">Купить</a>
                 <a class="bookmark-btn" href="">В закладки</a>
               </div>
             </li>
@@ -294,7 +301,7 @@
       </div>
     </div>
     <section class="items-info">
-      <div class="container">
+      <div class="container items-info-container">
         <h2>Пара слов о перфораторах</h2>
         <p class="text-info">
           Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления
@@ -306,10 +313,10 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
+    <div class="container footer-top-container">
       <div class="footer-top">
         <a class="logo-main logo" href="index.html">
-          <img src="img\logo-technomart.svg" width="138" height="21" alt="Техномарт">
+          <img src="img/logo-technomart.svg" width="138" height="21" alt="логотип Техномарт">
         </a>
         <ul class="footer-top-nav">
           <li><a href=" #">Компания</a></li>
@@ -320,10 +327,10 @@
         </ul>
       </div>
       <div class="footer-center">
-        <p>
-          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+        <div class="footer-address">
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-        </p>
+        </div>
         <ul class="footer-center-nav">
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
@@ -345,12 +352,12 @@
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p class="htmlacademy">Разработано —
-          <a href="#">htmlacademy.ru</a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
       </div>
     </div>
   </footer>
-  <div class="popup-buy-container visually-hidden">
+  <div class="popup-buy-container">
     <div class="popup-buy">
       <p>Товар добавлен в корзину!</p>
       <div class="popup-buy-btn">
@@ -361,6 +368,7 @@
     </div>
     <div class="filter"></div>
   </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
