--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&display=swap&subset=cyrillic"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow&display=swap" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
@@ -15,15 +16,16 @@
   <!--НАШ ХЕДЕР-->
   <header class="header">
     <div class="header-top">
-      <div class="container">
+      <div class="container header-top-container">
         <a class="logo-main">
-          <img src="img\logo-technomart.svg" width="109" height="18" alt="Техномарт">
+          <img src="img/logo-technomart.svg" width="109" height="18" alt="логотип Техномарт">
         </a>
         <form action="https://echo.htmlacademy.ru" method="post" class="search">
           <input id="search" type="search" placeholder="Поиск:" class="search-input">
           <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
-            <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
-          </svg>  
+            <path
+              d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z" />
+          </svg>
           <label for="search" class="search-label">
             <span class="visually-hidden">Поиск:</span>
           </label>
@@ -35,21 +37,22 @@
         </ul>
       </div>
     </div>
-    <div class="container">
+    <div class="container header-middle-container">
       <div class="header-middle">
         <p class="description">
           Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта
         </p>
         <div class="header-address">
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
         </div>
         <div class="user-menu">
           <a class="login" href="#">
-              <svg fill="#c5c5c5"  xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
-                <path d="M14.875 8.5L6 0v6H0v5h6v6z"/>
-                <path d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/>
-              </svg>  
+            <svg fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+              <path d="M14.875 8.5L6 0v6H0v5h6v6z" />
+              <path
+                d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" />
+            </svg>
             Войти
           </a>
           <a class="registration" href="#">Регистрация</a>
@@ -57,13 +60,13 @@
       </div>
       <nav class="navigation">
         <ul class="nav-list">
-          <li class="paged nav-item"><a>Главная</a></li>
+          <li class="paged nav-item nav-item-first"><a>Главная</a></li>
           <li class="nav-item"><a href="#">Компания</a></li>
           <li class="nav-item"><a href="catalog.html">Каталог</a></li>
           <li class="nav-item"><a href="#">Новости</a></li>
           <li class="nav-item"><a href="#">Спецпредложения</a></li>
           <li class="nav-item"><a href="#">Доставка</a></li>
-          <li class="nav-item"><a href="#">Контакты</a></li>
+          <li class="nav-item nav-item-last"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -88,19 +91,19 @@
           <div class="slide slide-1">
             <h3>Дрели</h3>
             <p>Соседям на радость!</p>
-            <!--<img src="img\slider-drills.jpg" width="620" height="266" alt="Дрели">-->
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
           <div class="slide slide-2 visually-hidden">
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
-            <!--<img src="img\slider-perfs.jpg" width="620" height="266" alt="Перфораторы">-->
             <a class="btn-red" href="catalog.html">Открыть каталог</a>
           </div>
           <button class="btn-slider btn-left" type="button"><span class="visually-hidden">Назад</span></button>
           <button class="btn-slider btn-right" type="button"><span class="visually-hidden">Вперед</span></button>
-          <button class="indicator-slider indicator-left" type="button"><span class="visually-hidden">Назад</span></button>
-          <button class="indicator-slider indicator-right indicator-active" type="button"><span class="visually-hidden">Вперед</span></button>
+          <button class="indicator-slider indicator-left" type="button"><span
+              class="visually-hidden">Назад</span></button>
+          <button class="indicator-slider indicator-right indicator-active" type="button"><span
+              class="visually-hidden">Вперед</span></button>
         </div>
       </div>
       <ul class="menu-right">
@@ -127,44 +130,45 @@
       <ul class="card-items">
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 9000</a></h4>
-          <!-- <p class="card-item-img"> -->
-            <img src="img\item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
-          <!-- </p> -->
+          <span class="new new-none">new</span>
+          <img src="img/item-bfg9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
           <span class="del">32500 Р.</span>
           <span class="price">25500 Р.</span>
           <div class="buy">
-            <a class="buy-btn" href="">Купить</a>
+            <a class="buy-btn" href="buy.html">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
           </div>
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 3000</a></h4>
-            <img src="img\item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
+          <span class="new new-none">new</span>
+          <img src="img/item-bfg3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
           <span class="del">22500 Р.</span>
           <span class="price">15500 Р.</span>
           <div class="buy">
-            <a class="buy-btn" href="">Купить</a>
+            <a class="buy-btn" href="buy.html">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
           </div>
         </li>
         <li class="card-item">
           <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 6000</a></h4>
-            <img src="img\item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
+          <span class="new new-none">new</span>
+          <img src="img/item-bfg6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
           <span class="del">30500 Р.</span>
           <span class="price">25500 Р.</span>
           <div class="buy">
-            <a class="buy-btn" href="">Купить</a>
+            <a class="buy-btn" href="buy.html">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
           </div>
         </li>
         <li class="card-item">
-          <span class="new">new</span>
           <h4><a class="item-name" href="#">Перфоратор BOSCH BFG 2000</a></h4>
-          <img src="img\item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
+          <span class="new">new</span>
+          <img src="img/item-bfg2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
           <span class="del"></span>
           <span class="price">12500 Р.</span>
           <div class="buy">
-            <a class="buy-btn" href="">Купить</a>
+            <a class="buy-btn" href="buy.html">Купить</a>
             <a class="bookmark-btn" href="">В закладки</a>
           </div>
         </li>
@@ -177,20 +181,20 @@
         <a class="btn-red" href="#">Все производители</a>
       </div>
       <ul class="brand-items">
-        <li class="brand-item"><a href="#"><img src="img\bosch.png" width="126" height="37" alt="BOSCH"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\makita.png" width="123" height="40" alt="Makita"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\interskol.png" width="200" height="88" alt="Интерскол"></a>
+        <li class="brand-item"><a href="#"><img src="img/bosch.png" width="126" height="37" alt="BOSCH"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWALT"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/interskol.png" width="200" height="88" alt="Интерскол"></a>
         </li>
-        <li class="brand-item"><a href="#"><img src="img\hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\lg.png" width="121" height="73" alt="LG"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\aeg.png" width="151" height="96" alt="AEG"></a></li>
-        <li class="brand-item"><a href="#"><img src="img\metabo.png" width="204" height="69" alt="Metabo"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Hitachi"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a></li>
+        <li class="brand-item"><a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
     <!--СЕКЦИЯ СЕРВИСОВ-->
     <section class="services">
-      <div class="container">
+      <div class="container services-container">
         <div class="services-description">
           <h2 class="text-h2">Сервисы</h2>
           <p class="text-info">Хороший интернет-магазин отличается от плохого не только ценами!
@@ -232,7 +236,8 @@
         <p class="text-info">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p class="text-info">Мы можем доставить ваш товар в самые отдаленные точки России!
-          <span class="transport-company"><span class="text-logo">Техномарт</span> работает со многими транспортными компаниями:</span></p>
+          <span class="transport-company"><span class="text-logo">Техномарт</span> работает со многими транспортными
+            компаниями:</span></p>
         <ul class="transport">
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
@@ -243,17 +248,17 @@
       <section class="contacts">
         <h2 class="text-h2">Контакты</h2>
         <p class="text-info">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a class="mini-map" href="#"><img src="img\map.jpg" width="300" height="158" alt="Карта"></a>
-        <a class="btn-red" href="">Заблудились? Напишите нам!</a>
+        <a class="mini-map" href="map.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с адресом г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
+        <a class="btn-red feedback-btn" href="feedback.html">Заблудились? Напишите нам!</a>
       </section>
     </div>
   </main>
   <!--НАШ ФУТЕР-->
   <footer class="footer">
-    <div class="container">
+    <div class="container footer-top-container">
       <div class="footer-top">
         <a class="logo-main">
-          <img src="img\logo-technomart.svg" width="138" height="21" alt="Техномарт">
+          <img src="img/logo-technomart.svg" width="138" height="21" alt="логотип Техномарт">
         </a>
         <ul class="footer-top-nav">
           <li><a href=" #">Компания</a></li>
@@ -264,10 +269,10 @@
         </ul>
       </div>
       <div class="footer-center">
-        <p>
-          <adress>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</adress>
+        <div class="footer-address">
+          <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
           <a href="tel:+78125550555">+7 (812) 555-05-55</a>
-        </p>
+        </div>
         <ul class="footer-center-nav">
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
@@ -289,46 +294,58 @@
           <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p class="htmlacademy">Разработано —
-          <a href="#">htmlacademy.ru</a>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
       </div>
     </div>
   </footer>
   <!--ПОПАП С ОБРАТНОЙ СВЯЗЬЮ-->
-  <section class="popup-feedback visually-hidden">
+  <section class="popup-feedback">
     <div class="feedback">
-    <h2 class="visually-hidden">Обратная связь</h2>
-    <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="feedback-login">
-        <div class="feedback-name">
-          <label for="name">Ваше имя:</label>
-          <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      <h2 class="visually-hidden">Обратная связь</h2>
+      <form class="feedback-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="feedback-login">
+          <div class="feedback-name">
+            <label for="name">Ваше имя:</label>
+            <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+          </div>
+          <div class="feedback-email">
+            <label for="email">Ваш e-mail:</label>
+            <input id="email" type="email" name="email" placeholder="email@example.com">
+          </div>
         </div>
-        <div class="feedback-email">
-          <label for="email">Ваш e-mail:</label>
-          <input id="email" type="email" name="email" placeholder="email@example.com">
+        <div class="textarea">
+          <label for="textform">Текст письма:</label>
+          <textarea id="textform" name="letter" placeholder="В свободной форме"></textarea>
         </div>
-      </div>
-      <div class="textarea">
-        <label for="textform">Текст письма:</label>
-        <textarea id="textform" type="comment" name="letter" placeholder="В свободной форме"></textarea>
-      </div>
-      <button class="btn-red" type="submit">Отправить</button>
-    </form>
-    <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
+        <button class="btn-red" type="submit">Отправить</button>
+      </form>
+      <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
     <div class="filter"></div>
   </section>
   <!--ПОПАП С КАРТОЙ-->
   <section class="popup-map">
     <div class="map">
-    <h2 class="visually-hidden">Как до нас добраться</h2>
-    <img src="img/map-full.jpg" width="940" height="446" alt="Большая карта">
-    <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <!-- <img src="img/map-full.jpg" width="940" height="446" alt="Большая карта"> -->
+      <!-- <iframe src="https://yandex.by/map-widget/v1/-/CGDdI0Il" width="940" height="446" frameborder="0" allowfullscreen="true"></iframe> -->
+      <button class="close close-map" type="button"><span class="visually-hidden">Закрыть</span></button>
+    </div>
+    <div class="filter filter-map"></div>
+  </section>
+  <div class="popup-buy-container">
+    <div class="popup-buy">
+      <p>Товар добавлен в корзину!</p>
+      <div class="popup-buy-btn">
+        <a class="btn-red" href="">Оформить заказ</a>
+        <button class="btn-continue" type="button">Продолжить покупки</button>
+      </div>
+      <button class="close" type="button"><span class="visually-hidden">Закрыть</span></button>
     </div>
     <div class="filter"></div>
-  </section>
-  <script scr="js/script.js"></script>
+  </div>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
